working on mobile navigation bugs

--- a/themes/annual-report/scss/site/_site.scss
+++ b/themes/annual-report/scss/site/_site.scss
@@ -23,11 +23,6 @@ body {
 		padding-top: 43px;
 	}
 }
-.container {
-	xmargin: 0 auto;
-	xmax-width: 980px;
-	xpadding: 0 1em;
-}
 body .division-topbar {
 	@media screen and (min-width: 650px) {
 		position: fixed;
@@ -45,20 +40,22 @@ body .division-topbar {
 ========================================================================== */
 .home-content {
 	height: 100%;
-	xposition: absolute;
 }
 
 .home-content .dosl-img {
 	display: block;
 	margin: 0 auto;
-	position: absolute;
-	bottom: 30%;
-	left: 50%;
-	margin-left: -200px;
 	padding: 0 5%;
+	position: absolute;
+	bottom: 25%;
+	@media screen and (min-width: $break-small) {
+		left: 50%;
+		margin-left: -200px;
+	}
 	@media screen and (min-width: 650px) {
 		bottom: 5%;
 		padding: 0;
+
 	}
 }
 
@@ -161,15 +158,16 @@ body .division-topbar {
 
 
 .menu {
-	background-color: rgba(0,0,0,.01);
-	z-index: 1000;
+	display: none;
 	@media screen and (min-width: 650px) {
 		box-shadow: 0 4px 4px rgba(0,0,0,.06);
+		display: block;
 		position: fixed;
 		top: 43px;
 		left: 0;
 		width: 27%;
-		
+		background-color: rgba(0,0,0,.01);
+		z-index: 1000;
 	}
 	@media screen and (min-width: $break-large) {
 		background: #fff;
@@ -244,20 +242,19 @@ body .division-topbar {
 .preview-list {
 	background-color: rgba(0,0,0,.01);
 	overflow: auto;
+	overflow-x: hidden;
 	height: 100%;
+	position: relative;
+	z-index: 900;
 	@media screen and (min-width: 650px) {
 		display: block;
-		overflow: auto;
-		overflow-x: hidden;
-		xpadding-top: 0;
-		xpadding-bottom: 300px;
 		position: fixed;
 		top: 0;
 		bottom: 0;
 		width: 27%;
 		-ms-overflow-x: hidden;
 		-webkit-overflow-scrolling: touch;
-		z-index: 900;
+		z-index: 901;
 	}
 	@media screen and (min-width: 650px) and (max-width: 979px) {
 		z-index: 901;
@@ -265,7 +262,7 @@ body .division-topbar {
 	@media screen and (min-width: $break-large) {
 		padding-left: 100px;
 		width: 30%;
-		z-index: 911;
+		z-index: 902;
 	}
 }
 .spantop {
@@ -481,31 +478,7 @@ body .division-topbar {
 	padding-left: 3px;
 	font-family: Georgia;
 }
-
-
-/* Dark Theme
-.menu {
-	border-right: 1px solid #333;
-	background: #222;
-}
-.main-nav {
-	border-bottom: 1px solid #333;
-	& li {border-top: 1px solid #333;}
-	& a {color: #bbb;
-		&:hover {
-			color: #bbb;
-			background-color: #000;
-		}
-	}
-}
-.main-nav .active {	background-color: #000;}
-
-.preview-list {	background: #2a2a2a;}
-.preview-link {	color: #bbb;}
-.preview-title {color: #ddd;}
-.preview-list ul li {border-bottom: 1px solid #333;}
-.preview-link:hover {background: #000;}
- */
+/* Pace Loading Bar */
 .pace .pace-progress {
   background: #ffce39;
   position: fixed;
